# service-proxy

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  deploy-checkpoint.sh  main-checkpoint.py
app/: config_manager.py  health_check.py  models.py  nginx_manager.py
app/.ipynb_checkpoints/: models-checkpoint.py
app/api/: routes.py
app/api/.ipynb_checkpoints/: routes-checkpoint.py
docker/: docker-entrypoint-watch.sh  entrypoint.sh  ssl-renew.sh
docker/.ipynb_checkpoints/: ssl-renew-checkpoint.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/.ipynb_checkpoints/: nginx-checkpoint.conf
nginx/: nginx.conf.template  proxy_rules.conf  proxy_rules.conf.backup
nginx/.ipynb_checkpoints/: nginx.conf-checkpoint.template
nginx/docs/: DOCKER_DEPLOYMENT.md
scripts/: monitor_ntfy.py  query_voice_detail.sh  query_voices.sh  text_to_speech.sh
scripts/.ipynb_checkpoints/: monitor_ntfy-checkpoint.py
static/: home.html  index.html
static/.ipynb_checkpoints/: index-checkpoint.html
