[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.3",
    "uvicorn>=0.40.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
]
